--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Khanh-20120508",
   "license": "ISC",
   "dependencies": {
-    "bcrpyt": "^2.0.0",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
